<resources>
    <string name="app_name">My Project Organizer</string>
    <string name="action_settings">Settings</string>
    <string name="pgd_loading">Loading projects…</string>
    <string name="pgd_creating_project">Creating project…</string>
    <string name="pgd_updating">Updating data…</string>
    <string name="pgd_uploading_project">Uploading project…</string>
    <string name="p_name">Project name</string>
    <string name="p_select_an_option">Select an option</string>
    <string name="action_start">Start project</string>
    <string name="toolbarNewProject">New project</string>
    <string name="fail_pjt_name">Project: min 5 chars and should not be empty</string>
    <!--<string name="new_project_instructions">- Enter a name for your project.\n- Take a picture or select one of the gallery that represents the project (optional, you can do this later).</string>-->
    <string name="toolbarNewProjectFinish">Last step</string>
    <string name="add_question_form">Add another field in the project</string>
    <string name="description">Add a brief description</string>
    <string name="projectIsFinalized">Project finished</string>
    <string name="empty_char" translatable="false" />
    <string name="newField">New field</string>
    <string name="add_email">Add an email account</string>
    <string name="headerEmail">Set up your account</string>
    <string name="headerOtherConfigs">Other settings</string>
    <string name="soon">Coming soon</string>
    <string name="action_save">Save</string>
    <string name="notnull_field">Email is required</string>
    <string name="settings_updated">Configuration has been updated</string>
    <string name="detail_user_email">We do not ship or store your mail account. Encrypt your mail to serve as a handle for your projects.</string>
    <string name="noProjectTitle">No projects found</string>
    <string name="value_field">Enter any value, ex: 2h</string>
    <string name="type_field">Type of value, ex: Project Time</string>
    <string name="label_description">Description</string>
    <string name="unableToConnect">Could not connect to server</string>
    <string name="action_publish">Create project</string>
    <string name="err_max_fields">Maximum 10 cells</string>
    <string name="update">Update list</string>
    <string name="action_clear_prefs">Restore</string>
    <string name="prefs_clean">Preferences have been reset</string>
    <string name="more_options">More options</string>
    <string name="reloading">Reloading…</string>
    <string name="descript_pjct404">Create a new project and add a description</string>
    <string name="empty">Empty</string>
    <string name="description_empty">Description is empty</string>
    <string name="card_img">Card image</string>
    <string name="card_last_update">Last update:</string>
    <string name="use_image10mb">Use an image equal to or less than 12M</string>
    <string name="accountSettings">Account settings</string>
    <string name="optionCleanPrefs">Clean application preferences</string>
    <string name="optionOrderBy">Sort projects by…</string>
    <string name="optionChangeAccount">Change email account</string>
    <string name="optionDeleteAllProjects">Delete all projects</string>
    <string name="optionDeleteAllProjectsExtra">(cannot be undone)</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Accept</string>
    <string name="btn_take_select_img">Take or select a picture</string>
    <string name="sortByType">Type of order</string>
    <string name="selectColumnSort">Select the order</string>
    <string name="typeOrderAscendant">Ascendant (A - Z)</string>
    <string name="typeOrderDescendant">Descendant (Z - A)</string>
    <string name="sortByLastUpdate">Last updated project</string>
    <string name="sortByNameProject">Project name</string>
    <string name="sortByIdProject">Creation date</string>
    <string name="cannot_be_connect">Cannot be connected to server</string>
    <string name="toolbarProjetSelected">Project selected</string>
    <string name="error_project_selected">Unexpected error with selected project</string>
    <string name="falseValue">No</string>
    <string name="trueValue">Yes</string>
    <string name="optionSeeAppInfo">Application information</string>
    <string name="fail_perms_camera_storage">You cannot use the camera for lack of permits</string>
    <string name="project_empty">You don\'t have projects</string>
    <string name="finalized">Finalized</string>
    <string name="opt_take_picture">Take a picture</string>
    <string name="opt_select_picture">Select from gallery</string>
    <string name="add_more_pictures_to_project">Add more images to the project</string>
    <string name="add_header_picture_to_project">Add a header image to the project</string>
    <string name="click_here">Click here</string>
    <string name="add_photo">Add more</string>
    <string name="fail_max_pictures_project">Max. 12 images per project</string>
    <string name="configPicture">Configure</string>
    <string name="ask_yes_no">Are you sure you want delete it?</string>
    <string name="close_view" translatable="false">x</string>
    <string name="deletePicture">Delete</string>
    <string name="separator" translatable="false">/</string>
    <string name="add_descripton_image">Add a short description</string>
    <string name="message_error">Sorry, an unexpected error occurred.</string>
    <string name="complete_fields">Fields with values need a label and vice versa</string>
    <string name="edit_project">Edit project</string>
    <string name="delete_project">Delete project</string>
    <string name="welcome">Welcome</string>
    <string name="username">Your email address</string>
    <string name="password">Your password</string>
    <string name="copyright" translatable="false">OlivaDevelop &#169; 2016</string>
    <string name="welcome_signon">Sign Up</string>
    <string name="app">APP</string>
    <string name="new_user_in">in the</string>
    <string name="new_user_signonwebtoo">With this registration you can also access the web (coming soon)</string>
    <string name="new_user_more_security">And for more security for you…</string>
    <string name="new_user_nif">NIF</string>
    <string name="new_user_phone">Phone number</string>
    <string name="new_user_state">State</string>
    <string name="pgd_creating_user">Creating user…</string>
    <string name="new_user_accept_conditions">I accept the terms and conditions</string>
    <string name="new_user_notermschecked">You have to accept the terms</string>
    <string name="new_user_fieldsrequired">Email and password are required</string>
</resources>