<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_on_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_diagonal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cat.olivadevelop.myprojectorganizer.screens.SignOnScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mar20"
            android:text="@string/new_user_signonwebtoo"
            android:textSize="@dimen/size16" />

        <cat.olivadevelop.myprojectorganizer.tools.CustomEditText
            android:id="@+id/new_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mar10"
            android:hint="@string/username"
            android:padding="@dimen/pad10" />

        <cat.olivadevelop.myprojectorganizer.tools.CustomEditText
            android:id="@+id/new_user_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mar10"
            android:hint="@string/password"
            android:padding="@dimen/pad10" />


        <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mar10"
            android:layout_marginTop="@dimen/mar10"
            android:text="@string/new_user_more_security"
            android:textSize="@dimen/size16" />

        <cat.olivadevelop.myprojectorganizer.tools.CustomEditText
            android:id="@+id/new_user_nif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mar10"
            android:hint="@string/new_user_nif"
            android:padding="@dimen/pad10" />

        <cat.olivadevelop.myprojectorganizer.tools.CustomEditText
            android:id="@+id/new_user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mar10"
            android:hint="@string/new_user_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/pad10" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mar10">

            <cat.olivadevelop.myprojectorganizer.tools.CustomSpinner
                android:id="@+id/spinner_paises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/mar10"
                android:paddingTop="@dimen/pad2"
                android:src="@drawable/ic_collapse_00008"
                android:tint="@color/colorPrimary"/>

        </RelativeLayout>

        <cat.olivadevelop.myprojectorganizer.tools.CustomEditText
            android:id="@+id/new_user_prov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mar10"
            android:hint="@string/new_user_state"
            android:padding="@dimen/pad10" />

        <android.support.v7.widget.CardView
            android:id="@+id/signon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/mar10"
            android:background="@color/white"
            android:theme="@style/ButtonWithoutMin"
            app:cardCornerRadius="3dp"
            app:cardElevation="0dp"
            app:contentPadding="0dp">

            <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonHeight"
                android:text="@string/welcome_signon"
                android:theme="@style/Button.TextView.Center" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="16"
        android:orientation="vertical">

        <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="bottom|center_horizontal"
            android:text="@string/copyright"
            android:textSize="@dimen/size12" />
    </RelativeLayout>
</LinearLayout>
