<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/CommonActivity"
    tools:context="cat.olivadevelop.myprojectorganizer.screens.SettingsActivity">

    <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/headerEmail"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:theme="@style/DividerOptions" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/height10" />
    <!--// boton cambiar cuenta //-->
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonHeight"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:theme="@style/Button"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:contentPadding="0dp">

        <LinearLayout
            android:id="@+id/changeEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/imageButtonHeight"
                android:layout_height="@dimen/imageButtonHeight"
                android:src="@drawable/ic_person_white_36dp"
                android:theme="@style/Button.ImageView" />

            <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
                android:id="@+id/putEmailInPrefs"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/buttonHeight"
                android:text="@string/add_email"
                android:theme="@style/Button.TextView" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/height10" />

    <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_user_email"
        android:textSize="@dimen/size12" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/height50" />

    <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/accountSettings"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:theme="@style/DividerOptions" />

        <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
            android:id="@+id/optionChangeAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optionChangeAccount"
            android:theme="@style/ButtonOption" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:theme="@style/DividerOptions" />

        <LinearLayout
            android:id="@+id/optionSortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:theme="@style/ButtonOptionLayout">

            <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionOrderBy" />

            <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
                android:id="@+id/resultOrderBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonOptionMini" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:theme="@style/DividerOptions" />

        <LinearLayout
            android:id="@+id/optionDelAllProjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:theme="@style/ButtonOptionLayout">

            <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionDeleteAllProjects" />

            <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionDeleteAllProjectsExtra"
                android:theme="@style/ButtonOptionMiniAlert" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:theme="@style/DividerOptions" />

        <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
            android:id="@+id/optionSeeAllPermissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optionSeeAppInfo"
            android:theme="@style/ButtonOption" />

    </LinearLayout>

</LinearLayout>
