<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_diagonal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cat.olivadevelop.myprojectorganizer.screens.WelcomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mar10"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/size26"
            android:textStyle="bold" />

        <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
            android:id="@+id/title_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mar20"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="@dimen/size16" />

        <cat.olivadevelop.myprojectorganizer.tools.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mar10"
            android:background="@drawable/border_black"
            android:hint="@string/username"
            android:padding="@dimen/pad10" />

        <cat.olivadevelop.myprojectorganizer.tools.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mar20"
            android:background="@drawable/border_black"
            android:hint="@string/password"
            android:padding="@dimen/pad10" />

        <android.support.v7.widget.CardView
            android:id="@+id/action_si_dialog"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:theme="@style/ButtonWithoutMin"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:contentPadding="0dp">

            <cat.olivadevelop.myprojectorganizer.tools.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonHeight"
                android:text="@string/login"
                android:theme="@style/Button.TextView.Center" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical" />
</LinearLayout>
